<resources>
    <string name="app_name">SunmiPost</string>
    <string name="success">Success</string>

    <string name="connect_loading">connecting to sdk</string>
    <string name="connect_success">connect to sdk success</string>
    <string name="connect_fail">connect to sdk fail, please exit to reconnect</string>

    <string name="basic">Basic</string>
    <string name="read_card">ReadCard</string>
    <string name="pin_pad">PinPad</string>
    <string name="security">Security</string>
    <string name="emv">EMV</string>
    <string name="scan">Scan</string>
    <string name="version">Version</string>
    <string name="other">Other</string>
    <string name="etc">ETC</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="all_open">All Open</string>
    <string name="all_close">All Close</string>
    <string name="amount">Amount (cent)</string>
    <string name="fail">Fail</string>
    <string name="loading">Loading</string>
    <string name="handling">Processing</string>
    <string name="requesting">Requesting</string>


    ////////////////////////////////////////////////////////////////////////////////////////////////
    <string name="card_test_mag">Magnetic card test</string>
    <string name="card_test_mag_enc">Magnetic card test(Encrypt track data)</string>
    <string name="card_test_ic">IC card test</string>
    <string name="card_test_m1">Mifare card test</string>
    <string name="card_test_m1_psame">Mifare card test(Authenticated by SAM AV2)</string>
    <string name="card_test_sam">SAM card test</string>
    <string name="card_test_MIFARE_Ultralight">MiFare Ultralight C card test</string>
    <string name="card_test_MIFARE_Ultralight_ev1">MiFare Ultralight ev1 card test</string>
    <string name="card_test_FELICA">FeLiCa card test</string>
    <string name="card_test_apdu">Normal APDU test</string>
    <string name="card_test_transmit_apdu">Transmit APDU test</string>
    <string name="card_test_mifare_plus">Mifare Plus card test</string>>
    <string name="card_test_sle4442_4428">SLE4442/4428 card test</string>
    <string name="card_test_at24c">AT24Cxxx card test</string>
    <string name="card_test_at88scxx">AT88SCxxx card test</string>


    <string name="card_total">Total：</string>
    <string name="card_success">Pass：</string>
    <string name="card_fail">Fail：</string>
    <string name="card_track1">Track1：</string>
    <string name="card_track2">Track2：</string>
    <string name="card_track3">Track3：</string>
    <string name="card_pan">PAN:</string>
    <string name="card_service_code">Service code:</string>
    <string name="card_check_ic_card">Find IC card</string>
    <string name="card_check_rf_card">Find NFC card</string>
    <string name="card_check_card_error">Check card error</string>
    <string name="card_uuid">UUID：</string>
    <string name="card_ats">ATS:</string>
    <string name="card_atr">ATR：</string>
    <string name="card_NO">Card NO：</string>
    <string name="card_expire_date">Expire Date：</string>
    <string name="cardholder_name">Cardholder Name：</string>
    <string name="print">Print</string>
    <string name="magnetic_card_test_encrypt_track_data">Magnetic Card Test (Encrypt track data)</string>
    <string name="print_text">Print Text</string>

    ////////////////////////////////////////////////////////////////////////////////////////////////
    <string name="screen_off_print">Screen off print</string>
    <string name="print_text_content">Print Text Content</string>
    <string name="print_text_size">Print Text Size</string>
    <string name="e_signature">E-signature</string>
    <string name="clear">Clear</string>
    <string name="screen_rotation">Screen Rotation</string>
    <string name="up">UP</string>
    <string name="down">DOWN</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>

    <string name="text_mock">I LOVE SUNMI!I LOVE SUNMI!I LOVE SUNMI!I LOVE SUNMI!I LOVE SUNMI!I LOVE SUNMI!I LOVE SUNMI!I LOVE SUNMI!I LOVE SUNMI!I LOVE SUNMI!I LOVE SUNMI!I LOVE SUNMI!I LOVE SUNMI!I LOVE SUNMI!I LOVE SUNMI!</string>
    <string name="set_date_time">Set Date&amp;Time</string>

    <string name="text_mock1">VBT YAZILIM</string>
    <string name="print_repeat_time">Repeat times</string>
    <string name="print_screen_off_wait_time">Waiting time after screen off(Unit:s)</string>
    <string name="print_screen_off_interval">Interval time between 2 print(Unit:s)</string>
    <string name="device_comm">Device Communication</string>
    <string name="device_shutdown">Shutdown</string>
    <string name="device_reboot">Reboot</string>
    <!-- 0-USB，1-串口，2-wifi，3-蓝牙 -->
    <string name="usb_comm">USB</string>
    <string name="serial_port_comm">Serial Port</string>
    <string name="wifi_comm">WIFI</string>
    <string name="bluetooth_comm">Bluetooth</string>
    <string name="comm_type">Communication Type</string>
    <string name="check">Check</string>
    <string name="send_data">Send Data</string>
    <string name="out_log">Output Log</string>
    <string name="send">send</string>
    <string name="camera_scanner">Camera Scanner</string>

    <string name="error_scan">Scan App is not installed, please upgrade ROM</string>

    <string name="other_version_sn">Device SN：</string>
    <string name="other_version_rom">Rom Version：</string>
    <string name="other_version_device">Device Model：</string>
    <string name="other_version_demo">SunmiSDKTestDemo Version：</string>
    <string name="other_version_service">SunmiPayHardwareService Version：</string>
    <string name="other_scan_result">Scan Result</string>
    <string name="ic_nfc_process">IC / NFC Process</string>

    ////////////////////////////////////////////////////////////////////////////////////////////////
    <string name="other_language">Language</string>
    <string name="other_language_auto">Auto</string>
    <string name="other_language_tr_tr" translatable="false">Turkish</string>
    <string name="other_language_en_us">English</string>
    <string name="other_language_ja_jp" translatable="false">日本語</string>

    ////////////////////////////////////////////////////////////////////////////////////////////////
    <string name="emv_swing_card_mag">Please swipe card</string>
    <string name="emv_swing_card_ic">Please swipe card and insert card</string>
    <string name="emv_confirm_card_no">Confirm card number</string>
    <string name="emv_confirm_cert">Confirm certificate information</string>
    <string name="emv_card_no_error">Get Card info error</string>
    <string name="emv_app_select">Please select app</string>
    <string name="emv_ic_process">NFC/IC Process</string>
    <string name="emv_mag_process">Magnetic Process</string>
    <string name="emv_read_rupay_card">Read Rupay card</string>
    <string name="emv_other">EMV Others</string>
    <string name="emv_query_ec_balance">QueryECBalance</string>
    <string name="emv_remove_card">Please remove card&#8230;</string>

    <string name="card_sector">Sector (0&#8211;15)</string>
    <string name="card_block">Block (0&#8211;2)</string>
    <string name="card_key_A">KeyA</string>
    <string name="card_key_B">KeyB</string>
    <string name="card_block_0">Block0</string>
    <string name="card_block_1">Block1</string>
    <string name="card_block_2">Block2</string>
    <string name="card_balance_symbol">Balance:</string>
    <string name="card_cost">Cost</string>
    <string name="card_read">Read</string>
    <string name="card_write">Write</string>
    <string name="card_init">Init</string>
    <string name="card_balance">Balance</string>
    <string name="card_value_add">Add</string>
    <string name="card_value_reduce">Reduce</string>
    <string name="card_value_restore">Restore</string>
    <string name="card_sector_hint">Please input correct sector(0&#8211;15)</string>
    <string name="card_block_hint">Please input correct block(0&#8211;2)</string>
    <string name="card_key_hint">Please input correct key</string>
    <string name="card_cost_hint">Please input correct cost amount</string>
    <string name="card_auth_success">Auth success</string>
    <string name="card_auth_fail">Auth fail</string>
    <string name="card_wallet_init_success">Init wallet format success</string>
    <string name="card_wallet_init_fail">Init wallet format fail</string>
    <string name="card_wallet_balance_success">Get wallet balance success</string>
    <string name="card_wallet_balance_fail">Get wallet balance fail</string>
    <string name="card_wallet_add_value_success">Increase wallet value success</string>
    <string name="card_wallet_add_value_fail">Increase wallet value fail</string>
    <string name="card_wallet_dec_value_success">Decrease wallet value success</string>
    <string name="card_wallet_dec_value_fail">Decrease wallet value fail</string>

    ////////////////////////////////////////////////////////////////////////////////////////////////

    <string name="basic_get_sys_param">Get system parameters</string>
    <string name="basic_set_sys_param">Set system parameters</string>
    <string name="basic_buzzer">Buzzer</string>
    <string name="basic_led">LED lamp control</string>
    <string name="basic_led_rb_on_new">Red/Blue on(New)</string>
    <string name="basic_led_yg_on_new">Yellow/Green on(New)</string>
    <string name="basic_led_all_on_new">All on(New)</string>
    <string name="basic_led_all_off_new">All off(New)</string>
    <string name="basic_screen_mode">Set screen exclusive</string>
    <string name="print_text_2">Print Text 2</string>

</resources>