<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/mainColors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_card"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:elevation="4dp"
        app:cardBackgroundColor="#032BF4"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/read_card"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_print"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:elevation="4dp"
        app:cardBackgroundColor="#4EDA54"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/card_view_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_view_card"
        app:layout_constraintTop_toTopOf="@+id/card_view_card">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/print"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_scan"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:elevation="4dp"
        app:cardBackgroundColor="#C80F15"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@+id/card_view_print"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/card_view_card"
        app:layout_constraintTop_toBottomOf="@+id/card_view_card">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/scan"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_emv"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:elevation="4dp"
        app:cardBackgroundColor="@color/mainColors"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/card_view_print"
        app:layout_constraintStart_toStartOf="@+id/card_view_print"
        app:layout_constraintTop_toBottomOf="@+id/card_view_print">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ic_nfc_process"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_other"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:elevation="4dp"
        app:cardBackgroundColor="#FB7449"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/card_view_scan"
        app:layout_constraintStart_toStartOf="@+id/card_view_scan"
        app:layout_constraintTop_toBottomOf="@+id/card_view_scan">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/other"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/basic_view_other"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:elevation="4dp"
        app:cardBackgroundColor="#9C27B0"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/card_view_emv"
        app:layout_constraintStart_toStartOf="@+id/card_view_emv"
        app:layout_constraintTop_toBottomOf="@+id/card_view_emv">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/basic"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>